<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".iu.register.CarerRegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/purple_700"
        android:layout_marginBottom="16dp"
        android:text="@string/titulo_fragment_register" />

    <ImageView
        android:id="@+id/imagen_fragment_registro"
        android:layout_width="210dp"
        android:layout_height="210dp"

        android:layout_gravity="center"
        android:src="@drawable/imagen_fragment_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correo_register_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/correo_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_fragment_registro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre_usuario_register_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_usuario_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_usuario_fragment_resgistro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telefono_usuario_register_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefono_usuario_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono_fragment_registro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasenha_usuario_register_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasenha_usuario_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_fragment_registro" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repetir_contrasenha_usuario_register_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repetir_contrasenha_usuario_register_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repetir_contrasena_fragment_registro" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton_registrarse_fragment_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/boton_registro_fragment_registro" />

</LinearLayout>